# Simple_blog

./: pyproject.toml
core/: settings.py
post/: admin.py  models.py  urls.py  views.py
post/migrations/: 0001_initial.py
post/templates/: base.html  contact.html  home.html  index.html
