[tool.poetry]
name = "simple_blog"
version = "0.1.0"
description = ""
authors = ["Alessandro Jeferson <alejefcarvalho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
psycopg2-binary = "^2.9.1"
pytest-django = "^4.4.0"
Pillow = "^8.2.0"
docker = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
